--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ button:disabled {
     cursor: not-allowed;
 }
 
-input[type="email"], input[type="password"] {
+input[type="email"], input[type="password"], input[type="text"] {
     padding: 10px;
     margin-bottom: 10px;
     width: calc(100% - 22px);
